add correct DB settings

--- a/farma-tica/farma-tica/Views/Home/Index.cshtml
+++ b/farma-tica/farma-tica/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         To prove that they work, you can execute either of the following links:
         <ul>
             <li>To a <a href="Home/Test">Test</a>.
-            <li>To a <a href="Home/Client/GetAll">Test</a>.
+            <li>To a <a href="Client/GetAllClients">Show All Clients in the Database in JSON</a>.
         </ul>
 
 </body>
